--- a/UNLMaps/UNLMaps/Views/MapsPage.xaml
+++ b/UNLMaps/UNLMaps/Views/MapsPage.xaml
@@ -6,13 +6,13 @@
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="UNLMaps.Views.MapsPage" Title="UNLMaps">
   <ContentPage.Content>
-    <AbsoluteLayout>
+    <AbsoluteLayout x:Name="MainLayout">
       <maps:Map x:Name="map" AbsoluteLayout.LayoutBounds="0, 0,1, 1" AbsoluteLayout.LayoutFlags="All" MapType="Street"/>
       <Image x:Name="FabImg" AbsoluteLayout.LayoutBounds=".90, .95, 60, 60" AbsoluteLayout.LayoutFlags="PositionProportional" Source="fab.png">
         <Image.GestureRecognizers>
           <TapGestureRecognizer Command="{Binding NavigateToCommand}"/>
         </Image.GestureRecognizers>
       </Image>
-    </AbsoluteLayout>
+   </AbsoluteLayout>
   </ContentPage.Content>
 </ContentPage>
